--- a/src/assets/style/options.css
+++ b/src/assets/style/options.css
@@ -333,7 +333,7 @@
 
 #options #customize span.customscript > input {
     margin-left: 5px;
-    width: 15%;
+    width: 16%;
 }
 
 #options #featureList {
@@ -356,6 +356,7 @@
 #options #customize p {
     line-height: 1.25rem;
     margin: 13px 0;
+    height: 28px;
 }
 
 #options #customize .word {
