--- a/src/assets/style/options.css
+++ b/src/assets/style/options.css
@@ -1,10 +1,11 @@
 .output {
-    padding: 0px 10px;
+    padding: 10px;
     font-size: 13px;
     font-family: Monaco, consolas;
     white-space: pre-wrap;
     word-break: break-all;
     text-align: left;
+    margin: 0;
 }
 
 .error {
@@ -739,7 +740,8 @@ li.CodeMirror-hint {
 #quickselect .select2-dropdown {
     position: fixed;
     font-size: 14px;
-    top: -58px
+    top: -58px;
+    border: none;
 }
 
 #quickselect .select2-results__options {
@@ -794,7 +796,6 @@ li.CodeMirror-hint {
     height: 40px;
     width: 40px;
     border: 0;
-    box-shadow: 0 0 16px 0 #607D8B;
     border-radius: 50%;
     background: #2196F3;
     color: white;
