--- a/src/assets/plugins/codemirror/theme/mdn-like-modified.css
+++ b/src/assets/plugins/codemirror/theme/mdn-like-modified.css
@@ -19,17 +19,17 @@
 .cm-s-mdn-like .cm-keyword { color: #6262FF; }
 .cm-s-mdn-like .cm-atom { color: #F90; }
 .cm-s-mdn-like .cm-number { color:  #ca7841; }
-.cm-s-mdn-like .cm-def { color: #8DA6CE; }
-.cm-s-mdn-like span.cm-variable-2, .cm-s-mdn-like span.cm-tag { color: #690; }
-.cm-s-mdn-like span.cm-variable-3, .cm-s-mdn-like span.cm-def, .cm-s-mdn-like span.cm-type { color: #07a; }
+.cm-s-mdn-like .cm-def { color: #8da6ce; }
+.cm-s-mdn-like span.cm-variable-2, .cm-s-mdn-like span.cm-tag { color: #607D8B; }
+.cm-s-mdn-like span.cm-variable-3, .cm-s-mdn-like span.cm-def, .cm-s-mdn-like span.cm-type { color: #5a5959; }
 
-.cm-s-mdn-like .cm-variable { color: #07a; }
+.cm-s-mdn-like .cm-variable { color: #2574b3; }
 .cm-s-mdn-like .cm-property { color: #905; }
 .cm-s-mdn-like .cm-qualifier { color: #690; }
 
 .cm-s-mdn-like .cm-operator { color: #cda869; }
-.cm-s-mdn-like .cm-comment { color:#777; font-weight:normal; }
-.cm-s-mdn-like .cm-string { color:#07a; font-style:italic; }
+.cm-s-mdn-like .cm-comment { color:#bbbaba; font-weight:normal; font-style: italic; }
+.cm-s-mdn-like .cm-string { color:#73a351; }
 .cm-s-mdn-like .cm-string-2 { color:#bd6b18; } /*?*/
 .cm-s-mdn-like .cm-meta { color: #000; } /*?*/
 .cm-s-mdn-like .cm-builtin { color: #9B7536; } /*?*/
